# Topam1z-Test-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.localapi  admin_handlers.py  bot.py  config.py  database.py  docker-compose.yml  docker-compse.yml  ffmpeg_tools.py  handlers.py  inline_handlers.py  keyboards.py  moviebox_tools.py  pyproject.toml  railway.toml  requirements.txt  setup_gcloud.sh  shared.py  shazam_tools.py  state.py  translations.py  utils.py  yt_dlp_tools.py
