# ════════════════════════════════════════════════════════════════════════
#  @topam1z_bot — pyproject.toml
#  Standard Python project metadata (PEP 517/518)
# ════════════════════════════════════════════════════════════════════════

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "topam1z-bot"
version     = "2.0.0"
description = "@topam1z_bot — Telegram media downloader, editor and movie bot"
readme      = "README.md"
requires-python = ">=3.12"

dependencies = [
    "python-telegram-bot[job-queue]>=21.0,<23.0",
    "yt-dlp>=2026.3.13",
    "aiohttp>=3.11.0",
    "asyncpg>=0.30.0",
    "shazamio>=0.8.1",
    "python-dotenv>=1.0.0",
    "moviebox-api>=0.3.5",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.setuptools]
py-modules = [
    "bot", "config", "database", "handlers", "admin_handlers",
    "shared", "state", "keyboards", "translations", "utils",
    "yt_dlp_tools", "ffmpeg_tools", "shazam_tools", "inline_handlers",
    "moviebox_tools",
]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select  = ["E", "F", "W", "I"]
ignore  = ["E501", "F405", "F403"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
